<resources>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tv_description">Testing this thing..</string>
    <string name="tv_title">Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name">todoister</string>
    <string name="action_settings">About</string>
    <!-- Strings used for fragments for navigation -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_todo_hint">e.g., Eat less at dinner</string>
    <string name="today_calendar_button">Today</string>
    <string name="empty_field">Empty task</string>
    <string name="due_date_text">Due Date</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="calendar_button_text">Date</string>
    <string name="priority_button_text">Priority</string>
    <string name="done_button_text">Done</string>
    <string name="todo_hint">e.g., Get a pet dinosaur</string>
    <string name="high_pri_text">YIKES</string>
    <string name="med_pri_text">MEH</string>
    <string name="low_pri_text">CHILL</string>
    <string name="todo_title">Todo</string>
    <string name="todo_pri">Priority</string>
    <string name="todo_date">Date</string>
    <string name="todo_today_text">Today</string>
    <string name="todo_tomorrow_text">Next day</string>
    <string name="todo_next_week_text">Next week</string>
    <string name="save_button_description">Save todo</string>


    <string name="about_text">Todoist Clone App - by JAYYAJ - version 0.1</string>
    <string name="add_todos">Add a Todo...</string>
    <string name="tool_bar_text">todoister</string>
</resources>